ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: app-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: python-home-page
            port: 
              number: 4040
      - pathType: Prefix
        path: /text
        backend:
          service:
            name: text-service
            port: 
              number: 5050
      - pathType: Prefix
        path: "/table"
        backend:
          service:
            name: table-service
            port: 
              number: 6060
      - pathType: Prefix
        path: "/list"
        backend:
          service:
            name: list-service
            port: 
              number: 7070
